--- a/source/core/GPU/CMakeLists.txt
+++ b/source/core/GPU/CMakeLists.txt
@@ -4,7 +4,7 @@ project(MyProject LANGUAGES C CXX)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
-
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /Od")
 set(VK_BACKEND ${CMAKE_SOURCE_DIR}/vk_backend)
 set(KTX_DIR ${CMAKE_SOURCE_DIR}/ktx)
 set(IMGUI_DIR ${CMAKE_SOURCE_DIR}/imgui)
